--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "preinstall": "cd ../contracts && npm unlink zk-multi-sig && npm install --registry=https://registry.npmmirror.com && npm run build && npm link",
-    "postinstall": "npm link zk-multi-sig && nuxt prepare",
-    "updatezkapp": "cd ../contracts && npm unlink zk-multi-sig && npm run build && npm link && cd ../ui && npm link zk-multi-sig && nuxt prepare"
+    "preview": "nuxt preview"
   },
   "devDependencies": {
     "nuxt": "3.0.0"
